<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity"
    android:orientation="vertical"
    android:background="@drawable/pp">


    <ImageView

        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="72dp"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <Button
        android:id="@+id/goB"


        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="145dp"

        android:layout_height="32dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_but"
        android:text="@string/next_2"
        android:textColor="#74E9F8"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gender_select" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="69dp"
        android:layout_height="26dp"


        android:layout_centerVertical="true"
        android:text="@string/gender"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="86dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/location"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/UserName"
        android:layout_width="287dp"
        android:layout_height="49dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/age"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:hint="@string/age_yy"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

    <TextView
        android:id="@+id/text_gender_select"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/valid_email"
        android:textAlignment="center"
        android:textColor="#385B77"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ok_g" />

    <Button
        android:id="@+id/Ok_g"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_below="@+id/gender"
        android:layout_alignParentEnd="true"

        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_but"
        android:text="@string/save1"
        android:textColor="#4BE7FB"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

</androidx.constraintlayout.widget.ConstraintLayout>