<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pp"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/devBy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp" />

    <ScrollView
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="193dp">

        <TextView
            android:id="@+id/text_show1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/click_get_inf"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </ScrollView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/live_coro"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/get_b1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="156dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/get_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="384dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="31dp"
        android:text="@string/not_liveinfo" />
</RelativeLayout>