<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/worldmap"
    tools:context=".Main9Activity">

    <Button
        android:id="@+id/ChooseLang"

        android:layout_width="268dp"
        android:layout_height="54dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonback2"
        android:text="@string/ChooseLang"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/NextHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="74dp"
        android:layout_height="87dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <Button
        android:id="@+id/NextHome"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/buttonback2"
        android:text="@string/gohome"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>