<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p"
    tools:context=".ForgotPassword">

    <EditText
        android:id="@+id/reset_emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_textview"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forget_textview"
        android:layout_width="235dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"

        android:text="@string/provide_emailfp"
        android:textAlignment="center"
        android:textColor="#10BCAC"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forget"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/backgroud_colour"
        android:text="@string/confirm"
        android:textColor="#FBF9F9"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_emailText" />

</androidx.constraintlayout.widget.ConstraintLayout>